Fix quiz labels on mobile

--- a/wp-content/themes/fundawande/css/theme/areas/_single-quiz-questions.scss
+++ b/wp-content/themes/fundawande/css/theme/areas/_single-quiz-questions.scss
@@ -302,7 +302,8 @@
             }
             ._mobile-images-answers {
                 .custom-control {
-                    padding-left: 2.5rem;
+                    padding-left: 1.5rem;
+                    padding-top: 0.5rem;
                 }
             }
         }
